builder entity modify